--- a/Profiles.html
+++ b/Profiles.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>A mini social networking site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile-Users</title>
     <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="shortcut icon" href="img/facebook-fill-svgrepo-com.svg" type="image/x-icon">
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
     <div class="container">
         <header class="shadow bg-body rounded rounded-4">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -147,161 +146,6 @@
         </header>
     </div>
 
-    <div class="container mt-5">
-        <div class="more_card">
-            <div class="card card_items">
-                <div class="header">
-                    <img src="img/about-1.jpg" alt="Profile Picture">
-                    <h2>John Doe</h2>
-                </div>
-                <div class="content">
-                    <img src="img/about-2.jpg" alt="Content Image">
-                    <h6 style="color: rgb(193, 193, 193);" class="mt-1">
-                        10 minutes ago
-                    </h6>
-                    <h5 class="titel_site">
-                        أهلا وسهلا
-                    </h5>
-                    <p class="description_site">
-                        هذا الموقع مهم حدا لعدة مجالات في البرمجه من جهتين اللأولى :-مبرمج الواجهه الأماميه للويب سايت
-                        (html,css,java script) الثانيه:- مبرمج الواجهه الخلفيه للويب سايت (api)
-                    </p>
-
-                    <hr>
-
-                    <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-pen" viewBox="0 0 16 16">
-                            <path
-                                d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z">
-                            </path>
-                        </svg>
-
-                        <span>
-                            (0) Comments
-
-                            <span id="post-tags-17799"></span>
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="card card_items">
-                <div class="header">
-                    <img src="img/about-1.jpg" alt="Profile Picture">
-                    <h2>John Doe</h2>
-                </div>
-                <div class="content">
-                    <img src="img/about-2.jpg" alt="Content Image">
-                    <h6 style="color: rgb(193, 193, 193);" class="mt-1">
-                        10 minutes ago
-                    </h6>
-                    <h5 class="titel_site">
-                        أهلا وسهلا
-                    </h5>
-                    <p class="description_site">
-                        هذا الموقع مهم حدا لعدة مجالات في البرمجه من جهتين اللأولى :-مبرمج الواجهه الأماميه للويب سايت
-                        (html,css,java script) الثانيه:- مبرمج الواجهه الخلفيه للويب سايت (api)
-                    </p>
-
-                    <hr>
-
-                    <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-pen" viewBox="0 0 16 16">
-                            <path
-                                d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z">
-                            </path>
-                        </svg>
-
-                        <span>
-                            (0) Comments
-
-                            <span id="post-tags-17799"></span>
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="card card_items">
-                <div class="header">
-                    <img src="img/about-1.jpg" alt="Profile Picture">
-                    <h2>John Doe</h2>
-                </div>
-                <div class="content">
-                    <img src="img/about-2.jpg" alt="Content Image">
-                    <h6 style="color: rgb(193, 193, 193);" class="mt-1">
-                        10 minutes ago
-                    </h6>
-                    <h5 class="titel_site">
-                        أهلا وسهلا
-                    </h5>
-                    <p class="description_site">
-                        هذا الموقع مهم حدا لعدة مجالات في البرمجه من جهتين اللأولى :-مبرمج الواجهه الأماميه للويب سايت
-                        (html,css,java script) الثانيه:- مبرمج الواجهه الخلفيه للويب سايت (api)
-                    </p>
-
-                    <hr>
-
-                    <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-pen" viewBox="0 0 16 16">
-                            <path
-                                d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z">
-                            </path>
-                        </svg>
-
-                        <span>
-                            (0) Comments
-
-                            <span id="post-tags-17799"></span>
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="card card_items">
-                <div class="header">
-                    <img src="img/about-1.jpg" alt="Profile Picture">
-                    <h2>John Doe</h2>
-                </div>
-                <div class="content">
-                    <img src="img/about-2.jpg" alt="Content Image">
-                    <h6 style="color: rgb(193, 193, 193);" class="mt-1">
-                        10 minutes ago
-                    </h6>
-                    <h5 class="titel_site">
-                        أهلا وسهلا
-                    </h5>
-                    <p class="description_site">
-                        هذا الموقع مهم حدا لعدة مجالات في البرمجه من جهتين اللأولى :-مبرمج الواجهه الأماميه للويب سايت
-                        (html,css,java script) الثانيه:- مبرمج الواجهه الخلفيه للويب سايت (api)
-                    </p>
-
-                    <hr>
-
-                    <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-pen" viewBox="0 0 16 16">
-                            <path
-                                d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z">
-                            </path>
-                        </svg>
-
-                        <span>
-                            (0) Comments
-
-                            <span id="post-tags-17799"></span>
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="css/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
     <script src="css/bootstrap-5.3.3-dist/js/bootstrap.esm.min.js"></script>
